add route53 application recovery controller CFN templates

--- a/cloudformation/Route53-ARC-routing-control.yaml
+++ b/cloudformation/Route53-ARC-routing-control.yaml
@@ -79,5 +79,10 @@ Resources:
 Outputs:
   ClusterArn:
     Value: !Ref Cluster
+  
+  HealthCheckIdEast:
+    Value: !Ref HealthCheckCell1
 
+  HealthCheckIdWest:
+    Value: !Ref HealthCheckCell2
   
