--- a/cloudformation/Route53-DNS-records.yaml
+++ b/cloudformation/Route53-DNS-records.yaml
@@ -1,7 +1,86 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: 'This template creates an Amazon Route53 Application Recovery Controller Readiness Check for the Tic Tac Toe demo app'
+Description: 'This template creates Amazon Route53 DNS Failover Records with healthcheck for the Tic Tac Toe demo app'
 Parameters:
-Resources:
-Outputs:
+  LoadBalancerDNSNameEast:
+    Default: Ticta-TicTa-14EPCX666HUKP-1243769915.us-east-1.elb.amazonaws.com
+    Description: The load balancer DNS name in region us-east-1
+    Type: String 
 
+  LoadBalancerDNSNameWest:
+    Default: Ticta-TicTa-1KRO5OZLP1OU4-1255316775.us-west-2.elb.amazonaws.com
+    Description: The load balancer DNS name in region us-west-2
+    Type: String 
+
+  LoadBalancerHostedZoneEast:
+    Default: Z35SXDOTRQ7X7K
+    Description: The load balancer hosted zone id in us-east-1
+    Type: String
+
+  LoadBalancerHostedZoneWest:
+    Default: Z1H1FL5HABSF5
+    Description: The load balancer hosted zone id in us-west-2
+    Type: String
+
+  DNSHostedZone:
+    Default: Z00818992JHDRS98KL6A9
+    Description: The DNS hosted zone ID where you want to add the DNS aliases
+    Type: String 
+
+  DNSDomainName:
+    Default: seb.go-aws.com
+    Description: The DNS domain name for that hosted zone ID 
+    Type: String 
+
+  DNSHealthcheckIdEast:
+    Description: The DNS domain name for that hosted zone ID 
+    Type: String 
+
+  DNSHealthcheckIdWest:
+    Description: The DNS domain name for that hosted zone ID 
+    Type: String 
+
+  ProjectId:
+    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
+    ConstraintDescription: Must begin with a letter and contain only alphanumeric
+      characters.
+    Default: TicTacToe
+    Description: The name of the project
+    MaxLength: '64'
+    MinLength: '1'
+    Type: String
+
+Resources:
+  FrontEndAliasRecordPrimary:
+      Type: AWS::Route53::RecordSet
+      Properties:
+        Comment: Failover Recordset to route traffic to the load balancer
+        HostedZoneId: !Sub ${DNSHostedZone}
+        Name: !Sub ${ProjectId}.${DNSDomainName}.
+        Type: A
+        AliasTarget:
+          DNSName: !Sub ${LoadBalancerDNSNameEast}
+          EvaluateTargetHealth: true
+          HostedZoneId: !Sub ${LoadBalancerHostedZoneEast}
+        SetIdentifier: !Sub ${ProjectId}-east 
+        Failover: PRIMARY 
+        HealthCheckId: !Sub ${DNSHealthcheckIdEast}
+
+  FrontEndAliasRecordSecondary:
+      Type: AWS::Route53::RecordSet
+      Properties:
+        Comment: Failover Recordset to route traffic to the load balancer
+        HostedZoneId: !Sub ${DNSHostedZone}
+        Name: !Sub ${ProjectId}.${DNSDomainName}.
+        Type: A
+        AliasTarget:
+          DNSName: !Sub ${LoadBalancerDNSNameWest}
+          EvaluateTargetHealth: true
+          HostedZoneId: !Sub ${LoadBalancerHostedZoneWest}
+        SetIdentifier: !Sub ${ProjectId}-west
+        Failover: SECONDARY 
+        HealthCheckId: !Sub ${DNSHealthcheckIdWest}
+
+Outputs:
+  DNSRecordName:
+    Value: !Ref FrontEndAliasRecordSecondary
   
