add healthcheck ID in CFN output

--- a/cloudformation/Route53-ARC-routing-control.yaml
+++ b/cloudformation/Route53-ARC-routing-control.yaml
@@ -113,9 +113,9 @@ Outputs:
   ClusterArn:
     Value: !Ref Cluster
   
-  # HealthCheckIdEast:
-  #   Value: !Ref HealthCheckCell1
+  HealthCheckIdEast:
+    Value: !Ref HealthCheckCell1
 
-  # HealthCheckIdWest:
-  #   Value: !Ref HealthCheckCell2
+  HealthCheckIdWest:
+    Value: !Ref HealthCheckCell2
   
