--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@aws-cdk/aws-ec2": "*",
     "@aws-cdk/aws-eks": "*",
     "@aws-cdk/aws-iam": "*",
+    "@aws-cdk/aws-cloudwatch": "*",
     "@aws-cdk/aws-dynamodb": "*",
     "@aws-cdk/aws-synthetics": "*",
     "@aws-cdk/core": "*",
