--- a/app/package.json
+++ b/app/package.json
@@ -12,12 +12,12 @@
   "devDependencies": {
     "@types/jest": "^26.0.10",
     "@types/node": "16.3.1",
-    "aws-cdk": "2.0.0-rc.11",
+    "aws-cdk": "^2.35.0",
     "ts-node": "^10.0.0",
     "typescript": "~4.3.5"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.0.0-rc.11",
+    "aws-cdk-lib": "^2.35.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.16"
   }
