--- a/app/package.json
+++ b/app/package.json
@@ -10,11 +10,11 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.10",
-    "@types/node": "16.3.1",
-    "aws-cdk": "^2.35.0",
+    "@types/jest": "^29.5.6",
+    "@types/node": "^20.8.7",
+    "aws-cdk": "^2.102.0",
     "ts-node": "^10.0.0",
-    "typescript": "~4.3.5"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "aws-cdk-lib": "^2.35.0",
